--- a/Assignment 3.ipynb
+++ b/Assignment 3.ipynb
@@ -178,18 +178,22 @@
     "1. Explain your chosen normalization approach for the motion data. Why did you select this method, and how does it specifically address the challenges of human motion data? What other normalization techniques did you consider, and why did you not choose them?\n",
     "\n",
     "[Answer]:\n",
+    "I first removed the overall movement (the person’s forward drift), then normalized each joint by its own mean and standard deviation across the whole dataset. So i had to make everything “local,” then z-score per joint. I picked this because different joints move in different ranges, and so I wanted the model to focus on pose change, not where the person is in the room. I didn’t use per-clip normalization (it makes clips inconsistent with each other), min–max (touchy with outliers). This simple method was stable and worked well.\n",
     "\n",
     "2. After training your autoencoder, explore and describe the structure of your learned manifold. You can use t-SNE or PCA to visualize the hidden unit space (include one image in your answer).  Are different motion types clustered in particular regions? Can you identify meaningful directions in the latent space that correspond to specific motion attributes (speed, posture, etc.)?\n",
     "\n",
     "[Answer]:\n",
+    "When I plotted the encoder features with PCA/t-SNE, similar motions appeared near each other. Walking, jogging, and running formed a continuum, a \"speed line\" from slow to fast. Another direction seemed to represent posture, from upright to leaned forward. Arm and upper-body actions appeared slightly off to the side. While the clusters weren’t perfect, distinct families of motion emerged with speed and posture being clear factors.\n",
     "\n",
     "3. Critically analyze the quality of your interpolated motions. Where does the interpolation succeed or fail? What patterns do you notice about transitions between dissimilar motions versus similar ones?\n",
     "\n",
     "[Answer]:\n",
+    "Whne we work with blending between similar clips, the transition/blending is smooth. The feet, hips stayed mostly clean. However, in contrast, blending with very different clips introduced issues: like some foot sliding, or misaligned steps. SO it turns out that blending works best when the two clips are already similar and in sync, which makes sense while The farther apart they are, the more noticeable the glitches become.\n",
     "\n",
     "4. For the corrupted motion reconstruction task, analyze which types of corruption your system handles well versus poorly. What does this tell you about the properties of your learned manifold?\n",
     "\n",
-    "[Answer]:"
+    "[Answer]:\n",
+    "The missing chunks or knocking out key joints (feet or hips) was harder as the model filled the gap with something average and it cause it to lose some style details, Which indicates that the model has a strong smooth and typical system, which is great for light noise but insufficient for large gaps or strict foot-contact rules. Adding contact awareness or stronger motion constraints would help with the tough cases."
    ]
   },
   {
