--- a/Assignment 3.ipynb
+++ b/Assignment 3.ipynb
@@ -39,7 +39,8 @@
    "outputs": [],
    "source": [
     "# For you to add video to your submission.\n",
-    "from IPython.display import Video"
+    "from IPython.display import Video\n",
+    "Video('./vid/sample_0.mp4')"
    ]
   },
   {
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d62621af",
    "metadata": {},
    "outputs": [
@@ -88,8 +89,11 @@
     }
    ],
    "source": [
-    "# Replace with your own video file.\n",
-    "Video('./vid/sample_0.mp4')"
+    "from IPython.display import Video, display\n",
+    "import glob\n",
+    "\n",
+    "for p in sorted(glob.glob(\"/content/Generative-Visual-Computing-3/motion-ae-output/part1_norm/*.mp4\")):\n",
+    "    display(Video(p))\n"
    ]
   },
   {
@@ -120,7 +124,14 @@
    "cell_type": "markdown",
    "id": "568bc9fe",
    "metadata": {},
-   "source": []
+   "source": [
+    "from IPython.display import Image, display\n",
+    "import os\n",
+    "\n",
+    "plot_path = os.path.join(\"/content/Generative-Visual-Computing-3/motion-ae-output/\", \"plots\", \"training_curves.png\")\n",
+    "print(\"Plot exists:\", os.path.exists(plot_path), plot_path)\n",
+    "display(Image(plot_path))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -142,7 +153,21 @@
    "id": "af27c247",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "import os, glob\n",
+    "from IPython.display import Video, HTML, display\n",
+    "\n",
+    "paths = [\"/content/Generative-Visual-Computing-3/motion-ae-output/interp_1.mp4\",\n",
+    "         \"/content/Generative-Visual-Computing-3/motion-ae-output/interp_2.mp4\"]\n",
+    "\n",
+    "# 2) Display (embed=True is important in Colab)\n",
+    "for p in paths:\n",
+    "    if os.path.exists(p) and os.path.getsize(p) > 0:\n",
+    "        display(Video(p, embed=True))\n",
+    "    else:\n",
+    "        print(f\"Skipping {p} (missing or empty).\")"
+   ]
   },
   {
    "cell_type": "markdown",
